[gd_scene load_steps=2 format=3 uid="uid://cdyb2po507abn"]

[ext_resource type="Script" uid="uid://cb8jkhcfpeb5t" path="res://scripts/menu.gd" id="1_yqeox"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_yqeox")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 408.0
offset_top = 496.0
offset_right = 476.0
offset_bottom = 520.0
text = "Sound"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 496.0
offset_top = 496.0
offset_right = 656.0
offset_bottom = 520.0
min_value = -30.0
max_value = 0.0

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -88.0
offset_right = 80.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.494
anchor_right = 0.5
anchor_bottom = 0.494
offset_left = -256.0
offset_top = -320.112
offset_right = 256.0
offset_bottom = 15.888
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="PreviewNode" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="Previous" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 168.0
offset_bottom = 40.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Previous"

[node name="Next" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Next"

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
